objects/sumoapp__RegistrationLink__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__EventIds__c</fullName>
        <label>Event Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process</label>
        <referenceTo>sumoapp__Process__c</referenceTo>
        <relationshipLabel>Process Registration Links</relationshipLabel>
        <relationshipName>ProcessRegistrationLinks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__RegistrationLinkForIframe__c</fullName>
        <label>SUMO Event Iframe Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__RegistrationLink__c</fullName>
        <label>SUMO Event Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__WhereCondition__c</fullName>
        <label>Where Condition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>SUMO Event Link</label>
    <listViews>
        <fullName>sumoapp__All</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__Type__c</columns>
        <columns>sumoapp__RegistrationLink__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__AllDynamicEventLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__Type__c</columns>
        <columns>sumoapp__RegistrationLink__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sumoapp__Type__c</field>
            <operation>equals</operation>
            <value>Dynamic</value>
        </filters>
        <label>All Dynamic Event Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__AllStaticEventLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__Type__c</columns>
        <columns>sumoapp__RegistrationLink__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sumoapp__Type__c</field>
            <operation>equals</operation>
            <value>Static</value>
        </filters>
        <label>All Static Event Links</label>
    </listViews>
    <listViews>
        <fullName>sumoapp__MyEventLinks</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__Type__c</columns>
        <columns>sumoapp__RegistrationLink__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My Event Links</label>
    </listViews>
    <nameField>
        <label>SUMO Event Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Event Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>